# osc2021

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.gcc  Makefile.inc  README.md  REFERENCE.md  Start.S  Uboot.c  Uboot.py  a.S  aux.h  bl_linker.ld  bmalloc.c  bmalloc.h  boot.S  bootloader.img  bootloader_raspi3.img  buddy.c  buddy.h  c232hm-ddhsl-0.cfg  command.c  command.h  config.txt  copy.sh  cpio_gen.sh  debug.txt  dmalloc.c  dmalloc.h  gdbcmd.gdb  gpio.h  initramfs.cpio  kernel.c  kernel.s  kernel8.elf  kernel8.img  kernel_sender.py  kn_linker.ld  (+55 more)
.github/: PULL_REQUEST_TEMPLATE.md
LAB1/: Makefile  kernel8.img  main.c  uart.c
Lab-00/: a.S  linker.ld
Lab-01/: Lab1.pptx  command.h  linker.ld  uart.c
Lab-07/: Makefile
Lab1/: Makefile  kernel8.elf
Lab2/: img.py  initramfs.cpio  kernel8.elf  kernel8.img
Lab3/: Makefile  kernel8.elf  kernel8.img
Lab4/: Makefile  initramfs.cpio  kernel8.elf  kernel8.img
Lab5/: kernel8.elf  kernel8.img
Lab6/: kernel8.elf  kernel8.img
Lab7/: Makefile  kernel8.elf  kernel8.img
Note/: lab00.md  lab02.md
UserProgram/: argv_test.c  fork_test.c
algo/: buddy.py
app/: .gitignore  CMakeLists.txt  Makefile  app.S  app.c  linker.ld  start.S
app/argv_test/: Makefile
app/argv_test/src/: main.c
app/fork_test/: Makefile
app/fork_test/src/: main.c
app/include/: user_lib.h
app/libs/: start.S  svc.S  user_lib.c
app/src/: app.S  app.c  fat32.1.c  fork_test.c  lab8.c
archive/: Makefile  initramfs.cpio  user.S
argv_test/: CMakeLists.txt  argv_test.c
asm/: exception.S  start.S
assets/: config.txt
boot/: WRITEME  boot.S  boot.c  boot.ld  config.txt  initramfs.cpio  start.s
bootloader/: .gitignore  CMakeLists.txt  Makefile  boot.S  bootloader.c  bootloader.elf  bootloader.img  config.txt  exception.c  exception.h  gdbinit  kernel2Uart.py  kernel8.elf  kernel8.img  link.ld  link_bl.ld  linker.ld  linker.lds  main.c  math.c  math.h  my_math.c  my_string.c  my_string.h  relocate.c  relocate.h  send_kernel.py  shell.c  shell.h  start.S  string.c  string.h  time.c  time.h  uart.c  uart.h  uploadimg.py  utils.c  utli.c
bootloader/include/: aux.h  bool.h  bootloader.h  cfg.h  command.h  cpio.c  data_type.h  flattened_devicetree.c  flattened_devicetree.h  gpio.h  io.h  loader.c  loader.h  mailbox.c  mailbox.h  mini_uart.h  mm.c  mm.h  mmio.h  reboot.c  shell.h  string.h  system.h  uart.c  uart.h  util.h  utility.S  utility.h  utils.h
bootloader/lib/: shell.c
bootloader/src/: boot.S  boot.s  bootloader.c  command.c  head.S  io.c  linker.ld  main.c  mini_uart.c  mmio.c  relocate.c  shell.c  start.S  string.c  system.c  uart.c  uart_boot.c  util.c  utils.c
buckup/: kernel8.img  readme.txt
buddy/: buddy.c  buddy.h
c-impl/: kernel.c
cpio_kernel/: cpio.h  main.c  shell.h  string.h  type.h  uart.c  uart.h
fork_test/: CMakeLists.txt  fork_test.c  start.S
gpio/: gpio.h
impl-c/: Makefile  gdbinit
impl-rs/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  gdbinit
impl-rs/.cargo/: config.toml
impl-rs/src/: boot.S  boot.rs  bsp.rs  config.rs  console.rs  cpu.rs  gpio.rs  linker.ld  main.rs  memory.rs  print.rs  shell.rs  uart.rs
impl-rs/src/bsp/: common.rs  gpio.rs  uart.rs
impl-rs/src/shell/: buffer.rs  cmd.rs
include/: allocator.h  allocator_utils.h  aux.h  auxiliary.h  base.h  bl_util.h  bootloader.h  bootshell.h  buddy.h  command.h  config.h  context.h  cpio.c  cpio.h  data_type.h  debug.c  debug.h  demo_func.h  device_tree.h  driver.h  dtb_parser.h  dynamic_allocator.h  entry.h  exc.h  exception.h  fat.h  fat32.h  fat32fs.h  fdt.c  fdt.h  files.h  flattened_devicetree.c  flattened_devicetree.h  fork.h  fs.h  gpio.h  (+64 more)
kernel/: CMakeLists.txt  Makefile  allocator.c  allocator.h  buddy.c  buddy.cpp  buddy.h  command.c  command.h  cpio.c  cpio.cpp  cpio.h  delay.S  demo_func.c  entry.S  exception.c  exception.h  fat32.c  fat32.cpp  fd.c  fd.h  fs.cpp  gpio.h  interrupt.c  interrupt.h  kernel.cpp  kernel8.elf  kernel8.img  kernel8.ld  kmain.cpp  link.ld  linker.ld  main.c  math.c  math.h  memory.cpp  memory_func.cpp  memset.S_  miniuart.cpp  mm.S  (+40 more)
kernel/exception/: exception.c  exception.h  time.c  time.h
kernel/fs/: fat32.c  fat32.h  sd.c  sd.h  tmpfs.c  tmpfs.h  vfs.c  vfs.h
kernel/include/: alloc.h  command.h  cpio.h  delay.h  dtb.h  exception.h  fat32.h  fatfs.h  fd.h  gpio.h  io.h  kernel.h  mini_uart.h  mmio.h  mmu.h  mmu_values.h  pf_alloc.h  printf.h  process.h  scheduler.h  sdhost.h  shell.h  string.h  syscall.h  system_call.h  task.h  thread.h  timer.h  tmpfs.h  utils.h  vfs.h
kernel/mm/: allocator.c  allocator.h  cpio.c  cpio.h
kernel/process/: fd.h  process.c  process.h  thread.c  thread.h
kernel/src/: alloc.c  command.c  cpio.c  dtb.c  exception.S  exception.c  fatfs.c  io.c  kernel.c  linker.ld  main.c  mini_uart.c  mmu.c  printf.c  process.c  sdhost.c  shell.c  start.S  string.c  syscall.c  task.c  thread.S  thread.c  timer.c  tmpfs.c  uart.c  util.c  utils.c  vfs.c
kernel/src/driver/: sdhost.c
kernel/src/exception/: entry.S  handler.S  handler.c  system_call.S  timer.S  vector_table.S
kernel/src/fs/: fat32.c  sdhost.c  tmpfs.c  vfs.c
kernel/src/memory/: cpio.c  dynamic_alloc.c  pf_alloc.c
kernel/src/scheduler/: scheduler.S  scheduler.c
kernel/src/shell/: command.c  shell.c
kernel/src/thread/: fd.c  thread.c
kernel/test/: config.txt
(+2614 files in other folders)
