cargo-features = ["edition2021"]
[package]
authors = ["Ian Chen <ianre657@gmail.com>"]
edition = "2021"
name = "kernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = {version = "5.x.x"}
spin = "0.5.2"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"
